// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#1D1D1B",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexGrow": 0,
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 15,
                "marginVertical": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0, 0, 0, 0.5)",
                  "borderRadius": 30,
                  "height": 30,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 30,
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "85%",
                    "width": "85%",
                  }
                }
              />
            </View>
          </View>
          <Gestures
            style={
              Object {
                "flexGrow": 1,
                "position": "relative",
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "resizeMode": "contain",
                    "width": "100%",
                  }
                }
              />
            </View>
          </Gestures>
          <View
            style={
              Object {
                "marginHorizontal": 15,
                "marginVertical": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 19,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 20,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#1D1D1B",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexGrow": 0,
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 15,
                "marginVertical": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0, 0, 0, 0.5)",
                  "borderRadius": 30,
                  "height": 30,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 30,
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "85%",
                    "width": "85%",
                  }
                }
              />
            </View>
          </View>
          <Gestures
            style={
              Object {
                "flexGrow": 1,
                "position": "relative",
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "resizeMode": "contain",
                    "width": "100%",
                  }
                }
              />
            </View>
          </Gestures>
          <View
            style={
              Object {
                "marginHorizontal": 15,
                "marginVertical": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 19,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 20,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. tablet landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#1D1D1B",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexGrow": 0,
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 20,
                "marginVertical": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0, 0, 0, 0.5)",
                  "borderRadius": 40,
                  "height": 40,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 40,
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "85%",
                    "width": "85%",
                  }
                }
              />
            </View>
          </View>
          <Gestures
            style={
              Object {
                "flexGrow": 1,
                "position": "relative",
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "resizeMode": "contain",
                    "width": "100%",
                  }
                }
              />
            </View>
          </Gestures>
          <View
            style={
              Object {
                "marginHorizontal": 20,
                "marginVertical": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 19,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 20,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`4. tablet portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#1D1D1B",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexGrow": 0,
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 20,
                "marginVertical": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(0, 0, 0, 0.5)",
                  "borderRadius": 40,
                  "height": 40,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 40,
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "85%",
                    "width": "85%",
                  }
                }
              />
            </View>
          </View>
          <Gestures
            style={
              Object {
                "flexGrow": 1,
                "position": "relative",
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <Image
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "resizeMode": "contain",
                    "width": "100%",
                  }
                }
              />
            </View>
          </Gestures>
          <View
            style={
              Object {
                "marginHorizontal": 20,
                "marginVertical": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 19,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 20,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
